<resources>
    <string name="app_name">BFAA2_Exca</string>
    <string name="user_name">Id user</string>
    <string name="full_name">Nama Lengkapr</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search_hint">Masukan Nama User</string>
    <string name="not_found">User Not Found</string>
    <string name="not_have">%1$s Not Have %2$s</string>
    <string name="language_settings">Language Settings</string>
    <string name="desk_gambar">Ini Gambar</string>
    <string name="text_view">Ini Tulisan</string>
    <string name="repo">Repository</string>
    <string name="comp">Company</string>
    <string name="loc">Location</string>
    <string name="type">Type</string>

    <!--Example String -->
    <string name="exp_login" translatable="false">Login</string>
    <string name="exp_name" translatable="false">Name</string>
    <string name="exp_location" translatable="false">Location</string>
    <string name="exp_type" translatable="false">Type</string>
    <string name="exp_publicRepos" translatable="false">0</string>
    <string name="exp_followers" translatable="false">1</string>
    <string name="exp_following" translatable="false">2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>