<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="data"
            type="com.example.bfaa2_exca.model.PersonModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/app_name"
                android:layout_marginStart="8dp"
                app:avatar='@{data.img_link ?? "" }'
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/text_repos"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_about_me"/>

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.type}"
                android:textSize="14sp"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fullname"
                tools:text="@string/exp_type"/>

            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@{data.name??data.status}"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_img"
                tools:text="@string/exp_name" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.location}"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="@{data.location!=null? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/exp_location" />

            <!--Public Repos Configurations-->
            <TextView
                android:id="@+id/text_repos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="18dp"
                android:text="@string/repo"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toEndOf="@id/profile_img"
                app:layout_constraintTop_toBottomOf="@id/reposity"
                app:layout_constraintEnd_toStartOf="@id/text_follower"/>

            <TextView
                android:id="@+id/reposity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@{String.valueOf(data.repository)}"
                tools:text="@string/exp_publicRepos"
                app:layout_constraintStart_toStartOf="@id/text_repos"
                app:layout_constraintTop_toTopOf="@id/profile_img"
                app:layout_constraintEnd_toEndOf="@id/text_repos"/>
            <!--Public Repos Configurations End-->

            <!-- Followers Configurations-->
            <TextView
                android:id="@+id/text_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="18dp"
                android:text="@string/followers"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toEndOf="@id/text_repos"
                app:layout_constraintTop_toBottomOf="@id/follower"
                app:layout_constraintEnd_toStartOf="@id/text_following"/>

            <TextView
                android:id="@+id/follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:text="@{String.valueOf(data.followers)}"
                tools:text="@string/exp_followers"
                app:layout_constraintTop_toTopOf="@id/reposity"
                app:layout_constraintStart_toStartOf="@id/text_follower"
                app:layout_constraintEnd_toEndOf="@id/text_follower"/>
            <!-- Followers Configurations End-->

            <!-- Following Configurations-->
            <TextView
                android:id="@+id/text_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/following"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:fontFamily="sans-serif-condensed"
                app:layout_constraintStart_toEndOf="@id/text_follower"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/following"/>

            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@{String.valueOf(data.following)}"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/text_following"
                app:layout_constraintTop_toTopOf="@id/follower"
                app:layout_constraintEnd_toEndOf="@id/text_following"
                tools:text="@string/exp_following"/>
            <!-- Following Configurations End-->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>